search by title works

--- a/app/views/movie_search/results.html.erb
+++ b/app/views/movie_search/results.html.erb
@@ -1,1 +1,7 @@
-This page intentionally left blank.
+<h1>Results</h1>
+
+<% @results["Search"].each do |movie| %>
+  <ul>
+    <li><%= movie["Title"] %></li>
+  </ul>
+<% end %>
