--- a/app/views/movie_search/index.html.erb
+++ b/app/views/movie_search/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Movie Search</h1>
 
 <%= form_tag("/search", method: "get") do %>
-<%= label_tag(:q, "Search for:") %>
-<%= text_field_tag(:q) %>
-<%= submit_tag("Search") %>
+  <%= label_tag(:title, "Search for:") %>
+  <%= text_field_tag(:title) %>
+  <%= submit_tag("Search") %>
 <% end %>
