--- a/app/views/movie_search/index.html.erb
+++ b/app/views/movie_search/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Movie Search</h1>
 
-<%= form_tag("/search", method: "get") do %>
+<%= form_tag("/results", method: "get") do %>
   <%= label_tag(:title, "Search for:") %>
   <%= text_field_tag(:title) %>
   <%= submit_tag("Search") %>
