made params more general to add more search functionality later

--- a/app/views/movie_search/index.html.erb
+++ b/app/views/movie_search/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Movie Search</h1>
 
 <%= form_tag("/results", method: "get") do %>
-  <%= label_tag(:title, "Search for:") %>
-  <%= text_field_tag(:title) %>
+  <%= label_tag(:search, "Search for:") %>
+  <%= text_field_tag(:search) %>
   <%= submit_tag("Search") %>
 <% end %>
