--- a/app/views/movie_search/index.html.erb
+++ b/app/views/movie_search/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Movie Search</h1>
 
+<p>
+  You can search by movie title only.
+</p>
+
 <%= form_tag("/results", method: "get") do %>
-  <%= label_tag(:search, "Search for:") %>
-  <%= text_field_tag(:search) %>
+  <%= label_tag(:title, "Search for:") %>
+  <%= text_field_tag(:title) %>
   <%= submit_tag("Search") %>
 <% end %>
